Fix Modal z-index

--- a/src/main/resources/css/cookie.css
+++ b/src/main/resources/css/cookie.css
@@ -27,5 +27,8 @@
     height: 28px;
     line-height: 28px;
 }
+.modal-cookiesPolicy {
+    z-index:99999;
+}
 
 .cookieButton.button-rounded { border-radius: 3px; }
